--- a/.github/workflows/test_parallels.yml
+++ b/.github/workflows/test_parallels.yml
@@ -5,19 +5,19 @@ on:
 
 jobs:
   job1:
-    runs-on: [self-hosted, ephemeral]
+    runs-on: self-hosted
     steps:
       - run: echo "Job 1 esperando..."
       - run: sleep 60
 
   job2:
-    runs-on: [self-hosted, ephemeral]
+    runs-on: self-hosted
     steps:
       - run: echo "Job 2 esperando..."
       - run: sleep 60
 
   job3:
-    runs-on: [self-hosted, ephemeral]
+    runs-on: self-hosted
     steps:
       - run: echo "Job 3 esperando..."
       - run: sleep 60
